kubernetes/base/apps/radar/radar/httproute.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radar
spec:
  hostnames:
    - radar.${CLUSTER_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: radar
          namespace: radar
          port: 9280
      matches:
        - path:
            type: PathPrefix
            value: /
